fix(to-do.css): Scrollbar appears when needed only

--- a/css/screens/to-do.css
+++ b/css/screens/to-do.css
@@ -61,7 +61,7 @@
   font-size: 1.2rem;
   height: 72vh;
   margin: 0.5em auto 0.5em auto;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 50vw;
   word-break: break-all;
 }
